Updated: side nav UI

--- a/app/src/main/res/menu/main_nav.xml
+++ b/app/src/main/res/menu/main_nav.xml
@@ -3,17 +3,17 @@
     <item
         android:id="@+id/mainNav_shop"
         android:icon="@drawable/ic_shop"
-        android:title="Shop" />
+        android:title="@string/shop" />
     <item
         android:id="@+id/mainNav_search"
         android:icon="@drawable/ic_search"
-        android:title="Search" />
+        android:title="@string/search" />
     <item
         android:id="@+id/mainNav_orders"
         android:icon="@drawable/ic_orders"
-        android:title="Orders" />
+        android:title="@string/orders" />
     <item
         android:id="@+id/mainNav_user"
         android:icon="@drawable/ic_user"
-        android:title="Orders" />
+        android:title="@string/account" />
 </menu>
