--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
+    <Button
+        android:id="@+id/button_openAr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Shop"
