--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -4,25 +4,29 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="10dp">
+    android:foreground="?attr/selectableItemBackground">
 
     <androidx.cardview.widget.CardView
         app:cardCornerRadius="20dp"
-        android:background="@color/cardview_dark_background"
+        app:cardBackgroundColor="#CACACA"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:elevation="20dp">
 
         <LinearLayout
             android:id="@+id/LL_background"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:layout_marginVertical="10dp">
 
             <ImageView
                 android:src="@drawable/ic_launcher_background"
                 android:id="@+id/itemProduct_image"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
+                android:layout_marginHorizontal="10dp"
                 android:layout_height="200dp"
                 android:scaleType="centerCrop"
                 android:layout_marginVertical="10dp"/>
@@ -32,15 +36,17 @@
                 android:id="@+id/itemProduct_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="Product Name"
-                android:textSize="16sp"/>
+                android:textSize="20sp"/>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/itemProduct_order"
+                style="@style/Widget.AppCompat.Button"
                 android:text="Order"
-                android:layout_marginVertical="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp" />
 
         </LinearLayout>
 
