--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -7,6 +7,7 @@
     android:layout_marginVertical="10dp">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/order_CV"
         app:cardCornerRadius="20dp"
         app:cardBackgroundColor="#CACACA"
         android:layout_width="match_parent"
