--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:foreground="?attr/selectableItemBackground">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/product_CV"
@@ -15,12 +14,13 @@
         android:elevation="50dp">
 
         <LinearLayout
+            android:paddingVertical="10dp"
             android:id="@+id/LL_background"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:layout_marginVertical="10dp">
+            android:foreground="?attr/selectableItemBackgroundBorderless">
 
             <TextView
                 android:layout_marginVertical="10dp"
